refactor: use now Snipper mode and simplify the mutation operator